<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlayout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gg_background"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/image_cogniance_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/greeteings_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/str_hello_team"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/llayout_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" >

        <Button
            android:id="@+id/button_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button_alarm" />

        <Button
            android:id="@+id/button_stopwatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button_stopwatch" />

        <Button
            android:id="@+id/button_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_button_timer" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_please_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llayout_tools"
        android:layout_centerHorizontal="true"
        android:text="@string/str_please_select"
        android:textColor="#000000" />

</RelativeLayout>