<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llayout_top_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp" >

    <LinearLayout
        android:id="@+id/llayout_app_logo_and_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/iv_app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:padding="3sp"
            android:src="@drawable/chuckskull" />

        <LinearLayout
            android:id="@+id/llayout_app_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_menu_main_about_app_version"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="15sp"
        android:text="@string/str_menu_main_about_app_copyright"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_menu_main_about_app_contacts"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/llayout_contacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="15sp" >

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_menu_main_about_app_contacts_phone"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_skype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_menu_main_about_app_contacts_skype"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_menu_main_about_app_contacts_email"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>