<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:text="@string/what_it_can_do_sw_ad_str"
        android:textColor="#00FF00"
        android:textSize="20dp"
        android:typeface="monospace" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:text="@string/help_string_sw_ad_part_1"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/help_string_sw_ad_part_2"
                android:textColor="#00FFFF"
                android:textSize="15dp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="fill_horizontal"
                android:text="@string/help_string_sw_ad_part_3"
                android:textColor="#00FFFF"
                android:textSize="15dp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/help_string_sw_ad_part_4"
                android:textColor="#00FF00"
                android:textSize="15dp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="fill_horizontal"
                android:text="@string/help_string_sw_ad_part_5"
                android:textColor="#00FF00"
                android:textSize="15dp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:gravity="fill_horizontal"
                android:text="@string/help_string_sw_ad_part_6"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal"
                android:text="@string/help_string_sw_ad_part_7"
                android:textColor="#CCCCCC"
                android:textSize="15dp"
                android:typeface="monospace" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/what_it_can_do_sw_ad_further_info_str"
        android:textColor="#FFFF00"
        android:typeface="monospace" />

</LinearLayout>