<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/splash_background" >

    <TextView
        android:id="@+id/tv_splash_activity_property_of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/splash_property_str_1"
        android:textColor="#333333"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_splash_activity_shumz_soft_inc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_splash_activity_property_of"
        android:layout_centerHorizontal="true"
        android:text="@string/splash_property_str_2"
        android:textColor="#333333"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image_chuckskull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/chuckskull"
        android:contentDescription="@string/app_name" />

</RelativeLayout>