<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TimePicker
        android:id="@+id/timer_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <DigitalClock
        android:id="@+id/digitalClock1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text=""
        android:visibility="visible" />

    <Button
        android:id="@+id/timer_button_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/digitalClock1"
        android:layout_alignParentLeft="true"
        android:text="@string/str_timer_button_start_stop"
        android:typeface="monospace" />

    <Button
        android:id="@+id/timer_button_pause_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/digitalClock1"
        android:layout_alignParentRight="true"
        android:text="@string/str_timer_button_pause_resume"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/ll_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tv_timer_current_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_timer_current_hours"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace" android:textSize="50sp" />

        <TextView
            android:id="@+id/tv_timer_delimiter_hm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:textSize="50sp"
            android:text="@string/str_timer_delimiter"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tv_timer_current_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_timer_current_minutes" android:textSize="50sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/tv_timer_delimiter_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_timer_delimiter"
            android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="50sp"
            android:typeface="monospace" />
        
            <TextView
            android:id="@+id/tv_timer_current_seconds" android:textSize="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_timer_current_minutes"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:typeface="monospace" />
    </LinearLayout>

    <Button
        android:id="@+id/timer_button_exit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="Exit" 
        
        android:onClick="timer_button_exit"/>

    <Button
        android:id="@+id/timer_button_show_dialog"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/timer_button_exit"
        android:text="Show Dialog" />

</RelativeLayout>